src/objects/GLBL_GSO_Content__c.object
<CustomObject>
    <description>Generic content object used to store content that can be exposed as part of other apps e.g. content Launchpad Success Stories</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirm whether this content should be considered up to date, &apos;live&apos; information. Uncheck this box if it has expired, or is not fit for purpose.</description>
        <inlineHelpText>Confirm whether this content should be considered up to date, &apos;live&apos; information. Uncheck this box if it has expired, or is not fit for purpose.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>Which part of the business will use this new functionality the most?</description>
        <inlineHelpText>Which part of the business will use this new functionality the most?</inlineHelpText>
        <label>Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <description>What is the business value that can be gained from your project?</description>
        <inlineHelpText>What is the business value that can be gained from your project?</inlineHelpText>
        <label>Business Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The main text of the content that you are uploading</description>
        <inlineHelpText>The main text of the content that you are uploading</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Image_URL__c</fullName>
        <description>The detail image to be associated with your content.</description>
        <inlineHelpText>The detail image to be associated with your content.</inlineHelpText>
        <label>Detail Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Icon_Caption__c</fullName>
        <description>When your icon image is used to link to your content, this caption will be beneath it.</description>
        <inlineHelpText>When your icon image is used to link to your content, this caption will be beneath it.</inlineHelpText>
        <label>Icon Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Image_URL__c</fullName>
        <description>The icon image to be associated with your content.</description>
        <inlineHelpText>The icon image to be associated with your content.</inlineHelpText>
        <label>Icon Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Innovation__c</fullName>
        <description>What is the most revolutionary aspect of your project?</description>
        <inlineHelpText>What is the most revolutionary aspect of your project?</inlineHelpText>
        <label>Innovation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <description>Please enter any further details or commentary about your project that has not been covered by the other fields (optional).</description>
        <inlineHelpText>Please enter any further details or commentary about your project that has not been covered by the other fields (optional).</inlineHelpText>
        <label>Other Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Step_Image_URL__c</fullName>
        <description>The Cirrus process step image to be associated with your content.</description>
        <inlineHelpText>The Cirrus process step image to be associated with your content.</inlineHelpText>
        <label>Process Step Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>The type of content are you adding.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of content are you adding.</inlineHelpText>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Use this field to order your content if it is used externally in assessments, forms, or websites. The content marked with 1 will be given highest priority, followed by 2 and so on.</description>
        <inlineHelpText>Use this field to order your content if it is used externally in assessments, forms, or websites. The content marked with 1 will be given highest priority, followed by 2 and so on.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Base__c</fullName>
        <description>Who will be the users of this new functionality?</description>
        <inlineHelpText>Who will be the users of this new functionality?</inlineHelpText>
        <label>User Base</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSO Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ref__c</columns>
        <columns>Description__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Type_Cirrus_Process_Step</fullName>
        <columns>NAME</columns>
        <columns>Ref__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Cirrus Process Step</value>
        </filters>
        <label>Type - Cirrus Process Step</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Type_Success_Story</fullName>
        <columns>NAME</columns>
        <columns>Ref__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Success Story</value>
        </filters>
        <label>Type - Success Story</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GSO Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSO Content</pluralLabel>
    <recordTypes>
        <fullName>Cirrus_Process_Step</fullName>
        <active>true</active>
        <label>Cirrus Process Step</label>
    </recordTypes>
    <recordTypes>
        <fullName>Success_Story</fullName>
        <active>true</active>
        <label>Success Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_Mandatory_Check</fullName>
        <active>true</active>
        <description>Stops users from saving the record if the description is blank, and the record type is &quot;Cirrus Process Step&quot;</description>
        <errorConditionFormula>AND(
    (RecordType.Name == &apos;Cirrus Process Step&apos;),
    (ISBLANK(Description__c))
   )</errorConditionFormula>
        <errorMessage>A description is mandatory. Please enter a description before attempting to save this record</errorMessage>
    </validationRules>
</CustomObject>